@@ -72,6 +72,8 @@ Version 2.0.xxxx (xxxx 2015)
 - Changed: Now using OpenZWave security branch
 - Changed: Now possible to disable serial hardware when usb port is not available
 - Changed: FibaroLink/Datapush, support for V4 firmware
+- Implemented: Scene/Group, now possible to add same device multiple times, as long as the ondelay is different
+- Implemented: Scene/Group devices now supports both on and off delays (off = ondelay + offdelay)
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
